# CFXS-Build

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: CommandUtils.hpp  FilesystemUtils.hpp  Log.cpp  Log.hpp  Utils.hpp  main.cpp  subprocess.h
src/Core/: Archiver.cpp  Archiver.hpp  Compiler.cpp  Compiler.hpp  Component.cpp  Component.hpp  FunctionWorker.hpp  GIT.cpp  GIT.hpp  GlobalConfig.hpp  Linker.cpp  Linker.hpp  LuaBackend.cpp  LuaBackend.hpp  Project.cpp  Project.hpp  RegexUtils.cpp  RegexUtils.hpp  SourceEntry.cpp  SourceEntry.hpp
src/Core/Docs/: IAR.lua
src/Project/: Compiler.cpp  Compiler.hpp  Component.cpp  Component.hpp  FunctionWorker.hpp  Linker.cpp  Linker.hpp  Project.cpp  Project.hpp  SourceEntry.cpp  SourceEntry.hpp
test_project/: .cfxs-build  Cortex_M4F.cfxs-build  LinkerScript.ld
test_project/.cfxs/: Cortex_M4F.cfxs-build  GCC.cfxs-build  IAR.cfxs-build
test_project/modules/Module_A/: .cfxs-build  HW_A.cpp
test_project/src/: Common.hpp  main.cpp
test_project/src/Module_B_copy/: HW_B_Copy.cpp
test_project/src/Module_C/: HW_C.cpp
test_project/src/webserver/: makefsdata.c
